--- a/pom.xml
+++ b/pom.xml
@@ -22,9 +22,9 @@
     <properties>
         <!-- Compile with Java 8 -->
         <java.version>1.8</java.version>
-<!--        <maven.compiler.source>8</maven.compiler.source>-->
-<!--        <maven.compiler.target>8</maven.compiler.target>-->
-    </properties>
+            <sonar.organization>codewithnishu221</sonar.organization>
+
+ </properties>
 
     <dependencies>
         <dependency>
